--- a/etc/mtree/BSD.var.dist
+++ b/etc/mtree/BSD.var.dist
@@ -42,6 +42,10 @@
         ..
         freebsd-update  mode=0700
         ..
+        hyperv          mode=0700
+            scripts
+            ..
+        ..
         ipf             mode=0700
         ..
         pkg
