Use -I to specify location for header file.

--- a/usr.sbin/hyperv/tools/Makefile
+++ b/usr.sbin/hyperv/tools/Makefile
@@ -8,4 +8,6 @@ HV_KVP_DAEMON_DISTDIR?= ${.CURDIR}/../../../contrib/hyperv/tools
 PROG= 	hv_kvp_daemon
 MAN= 	hv_kvp_daemon.8	
 
+CFLAGS+=	-I${.CURDIR}/../../../sys/dev/hyperv/utilities
+
 .include <bsd.prog.mk>
